src/test/deca/context/invalid/created/SansObjet/MultipleDeclVar.deca
// Description:
//    Teste la déclaration multiple d'une variable
// Resultats:
//    MultipleDeclVar.deca:8:8: Error: Multiple declaration of 'a' , first declaration at [7, 8]

{
    int a;
    int a;
}